--- a/MS.WebUI/control-services/src/styles.scss
+++ b/MS.WebUI/control-services/src/styles.scss
@@ -41,6 +41,9 @@ mat-form-field {
     div.mdc-text-field--focused:not(.mdc-text-field--disabled):hover  {
         background-color: #444564 !important;
     }
+    mat-label {
+        font-weight: 500 !important;
+    }
 }
 
 // .mat-mdc-form-field.mat-focused .mat-mdc-form-field-focus-overlay {
@@ -51,10 +54,19 @@ mat-form-field.mat-form-field-disabled {
     div.mdc-text-field--disabled  {
         background-color: #4a4a4a;
         opacity: 1;
+        color: #3f51b5 !important;
     }
    
     cursor: no-drop !important;
     div, input, span{
         cursor: no-drop !important;
     }
+}
+
+
+.mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled):not(.mat-mdc-option-multiple){
+    span, mat-pseudo-checkbox::after {
+        color: white;
+    }
+    background-color: rgb(255,255, 255);
 }
