--- a/MS.WebUI/control-services/src/app/features/auth/components/register/register.component.html
+++ b/MS.WebUI/control-services/src/app/features/auth/components/register/register.component.html
@@ -14,7 +14,7 @@
                     </mat-form-field>
                 </div>
 
-                <mat-form-field class="mb-3">
+                <mat-form-field class="mb-3" style="display: none;">
                     <mat-label>Grupo de Usuário</mat-label>
                     <mat-select [formControl]="formRegister.controls.userGroupId">
                         <mat-option value="F97E565D-08AF-4281-BC11-C0206EAE06FA">Adminsitrador</mat-option>
@@ -60,7 +60,7 @@
                         <mat-label>Comfirme sua senha*</mat-label>
                         <input type="password" matInput [formControl]="formRegister.controls.comfirmpassword"
                             autocomplete="off">
-                        <mat-error *ngIf="formRegister.controls.comfirmpassword.hasError('password_not_equals')">As senhas não conferem</mat-error>
+                        <mat-error *ngIf="formRegister.controls.comfirmpassword.hasError('notEquivalent')">As senhas não conferem</mat-error>
                     </mat-form-field>
                 </div>
 
