--- a/MS.WebUI/control-services/src/app/features/home/components/index/index.component.html
+++ b/MS.WebUI/control-services/src/app/features/home/components/index/index.component.html
@@ -1,4 +1,7 @@
 
 <app-layout>
     <p>index works!</p>
+    <a routerLink="/courses" >
+        <span>Crie sua conta.</span>
+      </a>
 </app-layout> 
