--- a/MS.WebUI/control-services/src/app/shared/theme/views/layout-menu/layout-menu.component.html
+++ b/MS.WebUI/control-services/src/app/shared/theme/views/layout-menu/layout-menu.component.html
@@ -28,7 +28,7 @@
 
         <ul class="menu-sub">
           <li class="menu-item">
-            <a href="javascript:void(0);" routerLink="/courses" routerLinkActive="active" class="menu-link">
+            <a routerLink="/courses" routerLinkActive="active" class="menu-link">
               <div data-i18n="Without menu">Consulta</div>
             </a>
           </li>
