--- a/MS.WebUI/control-services/src/app/app.component.html
+++ b/MS.WebUI/control-services/src/app/app.component.html
@@ -1,2 +1,13 @@
-<router-outlet></router-outlet>
+<div *ngIf="authorization">
+    <app-layout>
+        <router-outlet></router-outlet>
+    </app-layout>
+</div>
+<div *ngIf="!authorization">
+    <app-layout-account>
+        <router-outlet></router-outlet>
+    </app-layout-account>
+</div>
+
+
 
