--- a/MS.WebUI/control-services/src/app/shared/theme/views/layout-menu/layout-menu.component.html
+++ b/MS.WebUI/control-services/src/app/shared/theme/views/layout-menu/layout-menu.component.html
@@ -1,43 +1,37 @@
 <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-    <div class="app-brand demo">
-      <a href="" class="app-brand-link">
-        <span class="app-brand-text demo menu-text fw-bolder ms-2">Micro School</span>
+  <div class="app-brand demo">
+    <a href="" class="app-brand-link">
+      <span class="app-brand-text demo menu-text fw-bolder ms-2">Micro School</span>
+    </a>
+
+    <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
+      <i class="bx bx-chevron-left bx-sm align-middle"></i>
+    </a>
+  </div>
+
+  <div class="menu-inner-shadow"></div>
+  <ul class="menu-inner py-1">
+    <!-- Dashboard -->
+    <li class="menu-item"  routerLink="/home/index" routerLinkActive="active">
+      <a href="javascript:void(0);" class="menu-link">
+        <i class="menu-icon tf-icons bx bx-home-circle"></i>
+        <div data-i18n="Analytics">Dashboard</div>
       </a>
+    </li>
 
-      <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
-        <i class="bx bx-chevron-left bx-sm align-middle"></i>
+    <!-- Dashboard -->
+    <li class="menu-item" routerLink="/courses" routerLinkActive="active">
+      <a href="javascript:void(0);" class="menu-link">
+        <i class="menu-icon tf-icons bx bx-library"></i>
+        <div data-i18n="Courses">Courses</div>
       </a>
-    </div>
+    </li>
 
-    <div class="menu-inner-shadow"></div>
-    <ul class="menu-inner py-1">
-      <!-- Dashboard -->
-      <li class="menu-item active">
-        <a href="" class="menu-link">
-          <i class="menu-icon tf-icons bx bx-home-circle"></i>
-          <div data-i18n="Analytics">Dashboard</div>
-        </a>
-      </li>
-
-      <!-- Layouts -->
-      <li class="menu-item">
-        <a href="javascript:void(0);" class="menu-link menu-toggle">
-          <i class="menu-icon tf-icons bx bx-layout"></i>
-          <div data-i18n="Layouts">Courses</div>
-        </a>
-
-        <ul class="menu-sub">
-          <li class="menu-item">
-            <a routerLink="/courses" routerLinkActive="active" class="menu-link">
-              <div data-i18n="Without menu">Consulta</div>
-            </a>
-          </li>
-          <li class="menu-item">
-            <a href="layouts-without-navbar.html" class="menu-link">
-              <div data-i18n="Without navbar">Without navbar</div>
-            </a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </aside>
+    <li class="menu-item" routerLink="/custom" routerLinkActive="active">
+      <a href="javascript:void(0);" class="menu-link">
+        <i class="menu-icon tf-icons bx bx-library"></i>
+        <div data-i18n="Courses">custom</div>
+      </a>
+    </li>
+  </ul>
+</aside>
