--- a/MS.WebUI/control-services/src/app/shared/theme/views/layout-nav-bar/layout-nav-bar.component.html
+++ b/MS.WebUI/control-services/src/app/shared/theme/views/layout-nav-bar/layout-nav-bar.component.html
@@ -67,7 +67,7 @@
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#" (click)="signOut()">
+                        <a class="dropdown-item" href="javascript:void(0);" (click)="signOut()">
                             <i class="bx bx-power-off me-2"></i>
                             <span class="align-middle">Log Out</span>
                         </a>
