--- a/MS.WebUI/control-services/src/app/shared/theme/views/layout-menu/layout-menu.component.html
+++ b/MS.WebUI/control-services/src/app/shared/theme/views/layout-menu/layout-menu.component.html
@@ -27,11 +27,11 @@
       </a>
     </li>
 
-    <li class="menu-item" routerLink="/custom" routerLinkActive="active">
+    <!-- <li class="menu-item" routerLink="/custom" routerLinkActive="active">
       <a href="javascript:void(0);" class="menu-link">
         <i class="menu-icon tf-icons bx bx-library"></i>
         <div data-i18n="Courses">custom</div>
       </a>
-    </li>
+    </li> -->
   </ul>
 </aside>
