--- a/MS.WebUI/control-services/src/app/features/courses/components/list/list.component.html
+++ b/MS.WebUI/control-services/src/app/features/courses/components/list/list.component.html
@@ -1,1 +1,73 @@
-<p>list works!</p>
+<div class="card mb-12">
+    <div class="card-header">
+        <h2 class="col-12">Consulta de Custos</h2>
+    </div>
+    <div class="card-body">
+        <form class="form" [formGroup]="formSearch" *ngIf="formSearch">
+            <div class="col-12">
+                <mat-form-field>
+                    <mat-label>Nome</mat-label>
+                    <input type="text" matInput [formControl]="formSearch.controls.name" >
+                </mat-form-field>
+            </div>
+            <div class="row">
+                <div class="col-12 mb-3 botoes">
+                    <button mat-raised-button color="primary">
+                        Buscar
+                        <mat-icon>search</mat-icon>
+                    </button>
+                    <button mat-raised-button color="accent">
+                        Novo
+                        <mat-icon>add</mat-icon>
+                    </button>
+                </div>
+            </div>
+        </form>
+        <div>
+            <div class="mb-3">
+                <table class="table ">
+                    <thead class="table table-responsive">
+                        <tr>
+                            <th colspan="5">
+                                Nome
+                            </th>
+                            <th colspan="3">
+                                Data Inicio
+                            </th>
+                            <th colspan="3">
+                                Data Fim
+                            </th>
+                            <th colspan="1">
+                                Data Fim
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of items">
+                            <td colspan="5">
+                                {{item.name}}
+                            </td>
+                            <td colspan="3">
+                                {{item.startDate}}
+                            </td>
+                            <td colspan="3">
+                                {{item.endDate}}
+                            </td>
+                            <td colspan="1">
+                                <a class="btn btn-default">
+                                    <span class="tf-icons bx bx-edit"></span>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div *ngIf="items">
+                <mat-paginator [length]="paginationResult.totalElements" [pageSize]="paginationResult.pageSize"
+                    [pageIndex]="paginationResult.pageNumber - 1" [pageSizeOptions]="[2, 10, 25, 100]"
+                    aria-label="Select page" (page)="searchCourses($event)">
+                </mat-paginator>
+            </div>
+        </div>
+    </div>
+</div>
