--- a/MS.WebUI/control-services/src/app/app.component.html
+++ b/MS.WebUI/control-services/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!loading" id="overlay" >
+<div *ngIf="loading" id="overlay" >
     <span class="loader content"></span>
 </div>
 <div *ngIf="authorization">
