--- a/MS.WebUI/control-services/src/app/features/custom/components/form/form.component.html
+++ b/MS.WebUI/control-services/src/app/features/custom/components/form/form.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <form class="form" [formGroup]="formRegister">
+    <form class="form" [formGroup]="formRegister" >
         <div class="col-12">
             <mat-form-field>
-                <mat-label>teste</mat-label>
+                <mat-label transloco="hello"></mat-label>
                 <input type="text" matInput [formControl]="formRegister.controls.teste" autocomplete="off">
                 <mat-error *ngIf="formRegister.controls.teste.hasError('required')">Teste é
                     obrigatório</mat-error>
@@ -37,6 +37,9 @@
             <a style="width: 100%;height: 56px;" (click)="addItem()" class mat-raised-button color="primary">Add Item</a>
         </div>
 
+        <div class="mb-3">
+            <a style="width: 100%;height: 56px;" (click)="changeIdioma()" class mat-raised-button color="primary">idioma</a>
+        </div>
       
         <div class="mb-3">
             <button style="width: 100%;height: 56px;" class mat-raised-button color="primary"
