--- a/MS.WebUI/control-services/src/app/app.component.scss
+++ b/MS.WebUI/control-services/src/app/app.component.scss
@@ -30,8 +30,6 @@
     }
   } 
 
-
-
   #overlay {
     position: fixed; /* Sit on top of the page content */
     display: block; /* Hidden by default */
@@ -41,14 +39,10 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgb(91 104 122 / 14%);; /* Black background with opacity */
+    background-color: rgb(91 104 122 / 61%); /* Black background with opacity */
     opacity: 0.5;
     z-index: 2000; /* Specify a stack order in case you're using a different order for other elements */
     cursor: progress; /* Add a pointer on hover */
-}
-
-#overlay:hover {
-    cursor: pointer;
 }
 
 .content {
