--- a/MS.WebUI/control-services/src/app/features/courses/components/list/list.component.html
+++ b/MS.WebUI/control-services/src/app/features/courses/components/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-12">
     <div class="card-header">
-        <h2 class="col-12">Consulta de Custos</h2>
+        <h2 class="col-12">Consulta de Cursos</h2>
     </div>
     <div class="card-body">
         <form class="form" [formGroup]="formSearch" *ngIf="formSearch">
@@ -8,6 +8,9 @@
                 <mat-form-field>
                     <mat-label>Nome</mat-label>
                     <input type="text" matInput [formControl]="formSearch.controls.name" >
+                    <button *ngIf="formSearch.controls.name.value" matSuffix mat-icon-button aria-label="Clear" (click)="formSearch.controls.name.setValue('')">
+                        <mat-icon>close</mat-icon>
+                    </button> 
                 </mat-form-field>
             </div>
             <div class="row">
