--- a/MS.WebUI/control-services/src/app/features/home/components/index/index.component.html
+++ b/MS.WebUI/control-services/src/app/features/home/components/index/index.component.html
@@ -1,5 +1,32 @@
-
-<p>index works!</p>
-<a routerLink="/courses" >
-    <span>Crie sua conta.</span>
-  </a>
+<div class="row mb-4">
+  <div class="col-md-6 col-sm-12 col-xs-12">
+    <div class="card">
+      <div class="card-body">
+          <app-graph [chart]='"mychart1"'></app-graph>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6 col-sm-12 col-xs-12">
+    <div class="card">
+      <div class="card-body">
+          <app-graph [chart]='"mychart2"'></app-graph>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6 col-sm-12 col-xs-12">
+    <div class="card">
+      <div class="card-body">
+          <app-graph [chart]='"mychart3"'></app-graph>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6 col-sm-12 col-xs-12">
+    <div class="card">
+      <div class="card-body">
+          <app-graph [chart]='"mychart4"'></app-graph>
+      </div>
+    </div>
+  </div>
+</div>
