--- a/MS.WebUI/control-services/src/app/features/courses/components/form/form.component.html
+++ b/MS.WebUI/control-services/src/app/features/courses/components/form/form.component.html
@@ -1,19 +1,25 @@
+
+<h4 class="fw-bold py-3 mb-4">
+    <span class="fw-bold fw-light"><a routerLink="/courses" >Cursos</a> / </span>Cadastro
+</h4>
+
 <div class="card">
     <div class="card-header">
-        <h2 class="col-12">Cadastro de Cursos</h2>
+        <h2>Cadastro de Cursos</h2>
+        <mat-divider class="mat-elevation-z2"></mat-divider>
     </div>
     <div class="card-body ">
-        <form class="form" [formGroup]="formCourses" *ngIf="formCourses">
+        <form class="form mt-3" [formGroup]="formCourses" *ngIf="formCourses">
             <div class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
-                    <mat-form-field>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <mat-form-field appearance="outline" class="mat-form-custom">
                         <mat-label>Nome</mat-label>
                         <input type="text" matInput [formControl]="formCourses.controls.name">
                         <mat-error *ngIf="formCourses.controls.name.hasError('required')">Campo nome é obrigatório</mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
-                    <mat-form-field class="example-full-width">
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <mat-form-field appearance="outline" class="mat-form-custom">
                         <mat-label>Data de Início</mat-label>
                         <input matInput [matDatepicker]="picker" [formControl]="formCourses.controls.startDate">
                         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
@@ -21,8 +27,8 @@
                         <mat-error *ngIf="formCourses.controls.startDate.hasError('required')">Campo data de início é obrigatório</mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
-                    <mat-form-field class="example-full-width">
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <mat-form-field appearance="outline" class="mat-form-custom">
                         <mat-label>Data Conclusão</mat-label>
                         <input matInput [matDatepicker]="picker2" [formControl]="formCourses.controls.endDate">
                         <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -32,8 +38,9 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12 mb-3 botoes">
+            <mat-divider class="mb-3 mt-3 mat-elevation-z2"></mat-divider>
+            <div class="row mb-3 mt-3">
+                <div class="col-md-12 col-sm-12 col-xs-12 botoes">
                     <button routerLink="/courses" mat-raised-button color="accent">
                         Voltar
                         <mat-icon>keyboard_backspace</mat-icon>
